{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 26,
  "lineage": "055d069b-a35b-ac27-fb10-438b19bea6b9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:051627082058:internet-gateway/igw-0fbcc2f1bdbab9d2d",
            "id": "igw-0fbcc2f1bdbab9d2d",
            "owner_id": "051627082058",
            "tags": {
              "Name": "igw-vpc1"
            },
            "tags_all": {
              "Name": "igw-vpc1"
            },
            "vpc_id": "vpc-0e3f66d41a176108b"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:051627082058:internet-gateway/igw-0a0f5bc01e0e15441",
            "id": "igw-0a0f5bc01e0e15441",
            "owner_id": "051627082058",
            "tags": {
              "Name": "igw-vpc2"
            },
            "tags_all": {
              "Name": "igw-vpc2"
            },
            "vpc_id": "vpc-0724875134e5295f3"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:051627082058:route-table/rtb-0541edf12793399b4",
            "id": "rtb-0541edf12793399b4",
            "owner_id": "051627082058",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fbcc2f1bdbab9d2d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-vpc1"
            },
            "tags_all": {
              "Name": "rt-vpc1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3f66d41a176108b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_vpc1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:051627082058:route-table/rtb-07d68d38353896ffb",
            "id": "rtb-07d68d38353896ffb",
            "owner_id": "051627082058",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a0f5bc01e0e15441",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-vpc2"
            },
            "tags_all": {
              "Name": "rt-vpc2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0724875134e5295f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_vpc2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bfdaaf57304ae3b",
            "route_table_id": "rtb-0541edf12793399b4",
            "subnet_id": "subnet-0548e85212e8606d7"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc1",
            "aws_route_table.rt_vpc1",
            "aws_subnet.public_subnet_vpc1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8442a68cce5685e",
            "route_table_id": "rtb-0541edf12793399b4",
            "subnet_id": "subnet-0ca31c2f50fe65d63"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc1",
            "aws_route_table.rt_vpc1",
            "aws_subnet.private_subnet_vpc1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044d9a04abc3a19d5",
            "route_table_id": "rtb-07d68d38353896ffb",
            "subnet_id": "subnet-0679f3ab93f566efa"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc2",
            "aws_route_table.rt_vpc2",
            "aws_subnet.public_subnet_vpc2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c86e2f161864bd9",
            "route_table_id": "rtb-07d68d38353896ffb",
            "subnet_id": "subnet-01f1adc5ea01045ac"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc2",
            "aws_route_table.rt_vpc2",
            "aws_subnet.private_subnet_vpc2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:051627082058:subnet/subnet-0ca31c2f50fe65d63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca31c2f50fe65d63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "051627082058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-vpc1"
            },
            "tags_all": {
              "Name": "private-subnet-vpc1"
            },
            "vpc_id": "vpc-0e3f66d41a176108b"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:051627082058:subnet/subnet-01f1adc5ea01045ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f1adc5ea01045ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "051627082058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-vpc2"
            },
            "tags_all": {
              "Name": "private-subnet-vpc2"
            },
            "vpc_id": "vpc-0724875134e5295f3"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:051627082058:subnet/subnet-0548e85212e8606d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0548e85212e8606d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "051627082058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-vpc1"
            },
            "tags_all": {
              "Name": "public-subnet-vpc1"
            },
            "vpc_id": "vpc-0e3f66d41a176108b"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:051627082058:subnet/subnet-0679f3ab93f566efa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0679f3ab93f566efa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "051627082058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-vpc2"
            },
            "tags_all": {
              "Name": "public-subnet-vpc2"
            },
            "vpc_id": "vpc-0724875134e5295f3"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:051627082058:vpc/vpc-0e3f66d41a176108b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-062e375f711251873",
            "default_route_table_id": "rtb-042517c0298c268a6",
            "default_security_group_id": "sg-03ad9b0230dae7a5a",
            "dhcp_options_id": "dopt-0c24f93f740482d98",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3f66d41a176108b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-042517c0298c268a6",
            "owner_id": "051627082058",
            "tags": {
              "Name": "vpc1"
            },
            "tags_all": {
              "Name": "vpc1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:051627082058:vpc/vpc-0724875134e5295f3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0298f01524f17848f",
            "default_route_table_id": "rtb-0058b4af2b27d171a",
            "default_security_group_id": "sg-056c6a9034141af7f",
            "dhcp_options_id": "dopt-0c24f93f740482d98",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0724875134e5295f3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0058b4af2b27d171a",
            "owner_id": "051627082058",
            "tags": {
              "Name": "vpc2"
            },
            "tags_all": {
              "Name": "vpc2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peering_connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-09c781a1f5454a62d",
            "peer_owner_id": "051627082058",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0724875134e5295f3",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "vpc-peering"
            },
            "tags_all": {
              "Name": "vpc-peering"
            },
            "vpc_id": "vpc-0e3f66d41a176108b"
          },
          "dependencies": [
            "aws_vpc.vpc1",
            "aws_vpc.vpc2"
          ]
        }
      ]
    }
  ]
}